fixes the button spacing issue for numismatics

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -297,6 +297,7 @@ form.button-to {
 
 .btn-save-numismatics {
   width: auto;
+  margin-right: .3em;
 }
 
 .card-header a.monograms:after {
